--- a/book_project/src/main/webapp/resources/css/style.css
+++ b/book_project/src/main/webapp/resources/css/style.css
@@ -142,7 +142,7 @@
 	border-radius: 5px;
 	box-shadow: 6px 6px 2px #e0e0e0;
 	width: 100%;
-	height: 16rem;
+	height: 19rem;
 	max-width: 100%;
  
 	overflow: hidden;
@@ -944,6 +944,15 @@ table#listTable {
 }
 
 textarea#book_replyArea {
+	width: 100%;
+	height: 200x;
+	border: 0.5px solid #999999;
+	border-radius: 10px 10px 10px 10px;
+	resize: none;
+	padding: 20px;
+}
+
+textarea#book_replyContentArea {
 	width: 100%;
 	height: 200x;
 	border: 0.5px solid #999999;
